[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repdeco"
version = "0.1.2"
description = "Retry, Cache, Circuit Breaker decorator for Python (sync + async)"
authors = [
    { name="bell77m", email="bell77m@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

keywords = ["retry", "cache", "circuit-breaker", "decorator", "async"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test.py", "tests*"]